crates/dedup-cli/tests/snapshots/list_show__list_tier_a_basic.snap
---
source: crates/dedup-cli/tests/list_show.rs
expression: list_stdout
---
--- [A] group 1 (3 occurrences) ---
alpha.rs:5-23
beta.rs:4-22
gamma.rs:11-29
--- [B] group 2 (3 occurrences) ---
alpha.rs:9-20
beta.rs:8-19
gamma.rs:15-26
