crates/dedup-cli/tests/snapshots/list_show__show_tier_a_basic_group1.snap
---
source: crates/dedup-cli/tests/list_show.rs
expression: show_stdout
---
--- group 1 (3 occurrences) ---
alpha.rs:5-23
beta.rs:4-22
gamma.rs:11-29
